yaml/cowsay-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mooit-svc
spec:
  rules:
  - host: doesthiswork.k8s.lol #Hostname resolution. Make sure DNS is configured.
    http:
      paths:
      - backend:
          serviceName: mooit-svc
          servicePort: 80
        path: /
